# TeleNotif

./: .gitignore  CHANGELOG.md  FUTURE.md  IMPLEMENTATION.md  LICENSE  PACKAGE-STRUCTURE.md  PUBLISHING.md  README.md  TODO.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
telegrify/: __init__.py  __version__.py
telegrify/cli/: __init__.py  commands.py
telegrify/core/: __init__.py  bot.py  interfaces.py  registry.py
telegrify/formatters/: __init__.py  base.py  markdown.py  plain.py
telegrify/server/: __init__.py  app.py  routes.py
telegrify/utils/: __init__.py  escape.py
telenotif/: __version__.py
telenotif/cli/: __init__.py  commands.py
telenotif/core/: config.py
telenotif/server/: __init__.py  app.py  routes.py
telenotif/utils/: __init__.py  validators.py
tests/: conftest.py  test_bot.py  test_config.py  test_escape.py  test_formatters.py  test_registry.py
